--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <div class="wrapper">
   <main class="main">
-    <p1><strong> 404 Index</strong></p1>
+    <p1><strong> 404 Index !!</strong></p1>
     <i class="fa fa-plane" aria-hidden="true"></i>
   </main>
 
